--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,44 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
 
+:root {
+    --blue: rgb(30, 184, 231);
+    --white: rgb(187, 187, 187);
 
-:root { 
-    --primary-color: #020887
-    --secondary-color: #334195
-    --accent1-color: #286870
-    --accent2-color: #95b2b0
+    --heading-font: "Indie Flower", cursive;
 
-    --heading-font: "Ubuntu", serif;
-    --paragraph-font: "Ubuntu", serif;
-
-    --nav-backround-color:#020887
-    --nav-link-color:#334195
-    --nav-hover-link-color: #286870
-    --nav-hover-backround-color:#95b2b0
 
 }
 
+.indie-flower-regular {
+    font-family: "Indie Flower", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
 
-div.hero {
-    position: relative;
-}
-
-h1 {
-    position: absolute;
-}
-
-article {
-    position: absolute;
-    opacity: 30%;
+h1, h2 {
+    font-family: var(--heading-font)
     
-}
-
-article img{
-    float: right;
-}
-
-.hero img {
-    display: block;
-    width: 100%;
-    height: auto;
 }
