--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,10 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
-.indie-flower-regular {
-    font-family: "Indie Flower", cursive;
-    font-weight: 400;
-    font-style: normal;
-  }
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
+
+/* CSS regarding all pages */
 :root {
     --phthalo-blue: #020887ff;
     --marian-blue: #334195ff;
@@ -12,14 +9,28 @@
     --ash-gray: #95b2b0ff;
     --tea-green: #c6ebbeff;
 
-    --heading-font: "Indie Flower", cursive;
-    --paragraph-font: "Indie Flower",
+    --heading-font: "raleway";
+    --paragraph-font: "raleway";
+
     --blue: rgb(30, 184, 231);
     --white: rgb(187, 187, 187);
 
-    
+}
 
+p {
+    font-family: var(--paragraph-font);
+    font-weight: 300;
+    font-style: normal;
+}
 
+.raleway-thin {
+    font-family: "Raleway", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+  }
+
+h1, h2 {
+    font-family: var(--heading-font);
 }
 
 body {
@@ -27,15 +38,16 @@ body {
 }
 
 header {
-	margin: 1rem auto;
     padding: 20px;
 	display: grid;
-	grid-template-columns: 2fr 2fr 1fr 1fr;
+	grid-template-columns: 90px 1fr;
 	align-items: center;
-    justify-items: center;   
-	border-bottom: 1px solid #ccc;
+    justify-content: center;  
+    justify-items: center; 
+	border-bottom: 2px solid #ccc;
 	max-width: 100%;
-    background-color: rgba(4, 155, 224, 0.5);
+    background-color: white;
+
 }
 
 header img {
@@ -44,63 +56,43 @@ header img {
 	height: auto;
 }
 
-nav {
+header nav {
     display: grid;
-	grid-template-columns: 95px 95px 95px 95px;
+	grid-template-columns: 200px 200px 200px 200px;
 	align-items: center;
     justify-items: center;  
+    text-align: center;   
+}
+
+a:link, a:visited {
+    font-family: var(--heading-font);
+    color: var(--marian-blue);
+    padding: 14px 25px;
     text-align: center;
-}
+    text-decoration: none;
+    display: inline-block;
+    font-size: x-large;
+  }
+  
+  a:hover, a:active {
+    background-color: var(--tea-green);
+    border-radius: 5px;
+  }
 
-nav div {
-    border: 1px solid black;
-    padding: 2px;
-    padding-left: 5px;
-    padding-right: 5px;
-    background-color: beige;
-    border-radius: 3px;
-    
-}
-
-
-
-.hero h1 {
-
-    position: absolute;
-    top:25%; left: 50%;
-    transform: translateY(-50%) translateX(-50%);
-    background-color: rgba(0, 0, 0, 0.4);
-    width: 100%;
+  
+footer {
+    display: grid;
+    grid-template-columns: 250px 1fr;
+    justify-items: end;
+    align-items: start;
+    background-color: var(--tea-green);
+    padding: 1px;
     text-align: center;
-    color: rgb(224, 224, 224);
-
+    margin-top: 1%;
 }
 
-.hero img {
-    display:block;
-    width: 100%;
-    opacity: 0.8;
-}
-
-.hero article {
-    position: absolute;
-    top: 50%; left: 50%;
-    width: 90%; 
-    transform: translateY(-50%) translateX(-50%);
-    background-color: rgba(101, 208, 243, 0.5);
-    padding: 10px;
-    margin: 10px;
-    
-}
-
-.hero article img {
-    width: 250px;
-    float: right;
-    opacity: 1;
-}
-
-.history p {
-    text-align: center;
+footer img {
+    width: 25px;
 }
 
 section h2 {
@@ -109,69 +101,216 @@ section h2 {
 }
 
 section {
+    border-bottom: 1px solid black;
+}
+
+
+/*This is for the about, home and trips page */
+
+.hero h1 {
+    position: absolute;
+    top:35%; left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 96%;
+    text-align: center;
+    color: rgb(224, 224, 224);
+    padding: 2%;
+
+}
+
+.hero button{
+    position: absolute;
+    top: 52%; left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    background-color: rgba(255, 252, 252, 0.5);
+    padding: 1%;
+    border: none;
+
+}
+
+.hero img {
+    display: block;
+    width: 100%;
+}
+
+.hero article {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 300px;
+    grid-gap: 10px;
+    background-color: var(--tea-green);
+    padding: 10px;
+    margin: 10px;
+    border-radius: 3px;
+    box-shadow: 2px 2px 10px 2px black;
+}
+
+.hero article img {
+    width: auto;
+    height: 100%;
+    opacity: 1;
+    border-radius: 4px;
+}
+
+
+
+
+
+/* CSS pertaining to trips.html */
+
+.trips {
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    margin: 10px;
+
+}
+
+.trips h2 {
+    position: absolute;
+    border-bottom: solid black 1px;
+    color: var(--marian-blue);
+    background-color: rgba(17, 216, 140, 0.7);
+    padding: 10px;
+    box-shadow: 5px 5px 10px black;
+    margin: 10px;
+    
+}
+
+.trips div {
+    background-color: beige;
+    margin: 1px;
+    border: solid 2px var(--marian-blue);
+    
+}
+
+.trips div img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
+
+.trips p {
+    margin: 5px;
+}
+
+table {
+    width: 100%;
+    background-color: var(--glaucous);
+    margin: 1rem auto;
+    border: 1px black solid;
+}
+
+table tr th{
     border: 1px solid black;
 }
 
-.adventure{
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-auto-flow: row;
-    width: 50%;
-    margin: auto;
+/* CSS pertaining to about.html*/
+
+.history p {
+    text-align: center;
+}
+
+.adventure {
     display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-auto-flow: row;
+    width: 100%;
     align-items: center;
     justify-content: center;
     text-align: center;
 }
 
-.adventure img {
+.adventure img{
+    width: 90%;
+}
+
+.employee {
+    display: grid;
+    grid-template-columns:1fr 1fr;
+}
+
+.employee img {
+    width: 100%;
+}
+
+.employee div {
+    margin: 15px;
+    display: grid;
+    grid-template-columns: 200px 200px;
+    justify-content: center;
+    align-content: flex-start;
+    justify-items: center;
+}
+
+/* CSS pertaining to wwr/index.html */
+
+.content {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    justify-items: center;
+    align-items: center;
+    background-color: var(--tea-green);
+    margin: 10px auto;
+    padding:5px;
+    grid-gap: 15px
+}
+
+.content div{
+    display: grid;
+    width: 100%;
+    position: relative;
+    margin-left: 10px;
+}
+
+.content img {
+    width: 100%;
+    padding: 5px;
+}
+
+.content a:hover, a:active {
+    background-color: var(--glaucous);
+    width: 100%;
+}
+
+.content a:link, a:visited{
+    text-decoration: wavy;
+    font-family: var(--paragraph-font);
+    font-size: large;
+    color: black;
+    width: 90%;
+    grid-column: 1/ span 3;
+    margin: 5px;
+}
+
+form {
+    background-color: var(--glaucous);
     width: 300px;
-    height: auto;
+    padding: 20px;
+
+}
+
+.info {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 20px;
+}
+
+.info div {
+    border: 2px solid var(--phthalo-blue);
     padding: 10px;
 }
 
-
-
-a:link { 
-    text-decoration: none; 
-    font-weight: bold;
-    font-size: large;
-    font-family: var(--heading-font);
-  } 
-
-  a:visited { 
-    text-decoration: none; 
-  } 
-
-  a:hover { 
-    text-decoration: none; 
-  } 
-
-  a:active { 
-    text-decoration: none; 
-  }
-
-form {
+.align {
     display: grid;
-    border: 1px solid black;
-    width: 358px;
-}
-    
-textarea, input {
-    width: 350px;
-
+    grid-gap: 15px;
 }
 
-button {
-    width: 5em;
-    border-radius: 15px;
-    
+.radio {
+    margin-bottom: 15px;
 }
 
-footer {
-    background-color: aqua;
-    padding: 1px;
-    text-align: center;
 
-}
 
 
