--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -119,14 +119,13 @@ section {
 
 }
 
-.hero button{
+.hero div a:link{
     position: absolute;
     top: 52%; left: 50%;
     transform: translateY(-50%) translateX(-50%);
     background-color: rgba(255, 252, 252, 0.5);
     padding: 1%;
     border: none;
-
 }
 
 .hero img {
